# shuffler

./: .gitignore  README.md  pyproject.toml
.githooks/: pre-commit
shuffler/: __init__.py  util.py
shuffler/plugins/: __init__.py  eventloop.py  sqlalchemy.py
shuffler/shufflers/: __init__.py  asyncio.py  protocol.py  threading.py
shuffler/strategies/: __init__.py  exhaustive.py  protocol.py  random.py
tests/: conftest.py  test_asyncio.py  test_eventloop_plugin.py  test_sqlalchemy_plugin.py  test_threading.py
